--- a/code/PokerHud.scss
+++ b/code/PokerHud.scss
@@ -1,8 +1,4 @@
-
-.root {
-}
-
-text.title
+.money-text
 {
 	font-family: Nunito;
 	font-size: 50px;
@@ -14,7 +10,7 @@ text.title
 	border-radius: 100px 0 0 100px;
 	padding: 25px;
 	width: 300px;
-	text-shadow: 5px 5px 50px rgba( black, 0.8 );
+	text-shadow: 0 0 25px rgba( black, 0.8 );
 	background: linear-gradient( 25%, rgba( black, 0.8 ), rgba( black, 0.0 ) );
 }
 
